--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,12 @@
   },
   "dependencies": {
     "@vue/compat": "^3.4.21",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "bootstrap-vue": "^2.23.1",
     "vue": "^3.4.21",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vuelidate": "^0.7.7"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
