--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.25",
     "@types/pg": "^8.11.2",
     "drizzle-kit": "^0.20.14",
@@ -23,9 +24,12 @@
     "typescript": "^5.4.2"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.1",
     "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3"
   }
 }
