--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts"
+    "dev": "tsc-watch --onSuccess \"npm run watch\" src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,7 @@
     "drizzle-kit": "^0.20.14",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
+    "tsc-watch": "^6.0.4",
     "typescript": "^5.4.2"
   },
   "dependencies": {
