--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,17 +1,14 @@
 {
   "compilerOptions": {
-    "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true,
-    "target": "es2017",
-    "module": "esnext",
-    "lib": ["esnext"],
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
     "outDir": "dist",
+    "esModuleInterop": true,
+    "target": "esnext" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
+    "module": "esnext",
+    "moduleResolution": "Node" /* Specify how TypeScript looks up a file from a given module specifier. */,
+    "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
     "strict": true,
-    "types": ["node"],
-    "resolveJsonModule": true,
-    "experimentalDecorators": true
-  }
+    "skipLibCheck": true
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
