--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,10 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "bootstrap-vue": "^2.23.1",
-    "vue": "^3.4.21",
-    "vue-router": "^4.2.5",
     "vite": "^5.0.11",
+    "vue": "^3.4.21",
+    "vue-cookies": "^1.8.3",
+    "vue-router": "^4.2.5",
     "vuelidate": "^0.7.7"
   },
   "devDependencies": {
