--- a/backend/package.json
+++ b/backend/package.json
@@ -22,10 +22,10 @@
     "drizzle-kit": "^0.20.14",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.2"
+    "ts-node-dev": "^2.0.0"
   },
   "dependencies": {
+    "typescript": "^5.4.2",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
