--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,9 @@
     "vue": "^3.4.21",
     "vue-router": "^4.2.5",
     "vite": "^5.0.11",
-    "vuelidate": "^0.7.7"
+    "vuelidate": "^0.7.7",
+    "typescript": "~5.3.0",
+    "vue-tsc": "^1.8.27"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
@@ -35,8 +37,6 @@
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "npm-run-all2": "^6.1.1",
-    "prettier": "^3.0.3",
-    "typescript": "~5.3.0",
-    "vue-tsc": "^1.8.27"
+    "prettier": "^3.0.3"
   }
 }
