--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,9 @@
   "dependencies": {
     "typescript": "^5.4.2",
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.1",
     "express": "^4.18.3",
