--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,13 +17,14 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "bootstrap-vue": "^2.23.1",
+    "dayjs": "^1.11.10",
+    "typescript": "~5.3.0",
     "vite": "^5.0.11",
     "vue": "^3.4.21",
     "vue-cookies": "^1.8.3",
     "vue-router": "^4.2.5",
-    "vuelidate": "^0.7.7",
-    "typescript": "~5.3.0",
-    "vue-tsc": "^1.8.27"
+    "vue-tsc": "^1.8.27",
+    "vuelidate": "^0.7.7"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
